# ImageDetection

./: CMakeLists.txt  main.cpp
IM_Coba1/: IM_Coba1.cpp  IM_Coba1.sln  IM_Coba1.vcxproj  IM_Coba1.vcxproj.filters  Maze History.txt  Tes.cpp
IM_Coba1/IM/x64/Release/: IM.exe.recipe  IM.iobj  IM.ipdb
IM_Coba1/IM/x64/Release/IM.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
IM_Coba1/IM_Coba1/x64/Debug/: IM_Coba1.exe.recipe  IM_Coba1.ilk  vc143.idb
IM_Coba1/IM_Coba1/x64/Debug/IM_Coba1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  IM_Coba1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
IM_Coba1/IM_Coba1/x64/Release/: IM_Coba1.exe.recipe  IM_Coba1.iobj  IM_Coba1.ipdb
IM_Coba1/IM_Coba1/x64/Release/IM_Coba1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  IM_Coba1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
maze/saved/: Maze History.txt
